--- a/src/style.scss
+++ b/src/style.scss
@@ -95,6 +95,10 @@ body {
   text-align: center;
 }
 
+.content__title--m-sm {
+  margin-bottom: 10px;
+}
+
 //multisteps variables
 $color-secondary: #6c757d;
 $color-primary: #007bff;
