Additional animations: scripts - simplified

--- a/src/index.pug
+++ b/src/index.pug
@@ -23,7 +23,7 @@ header.header
             select.pick-animation__select.form-control
               option(value="scaleIn" selected) ScaleIn
               option(value="slideHorz") SlideHorz
-              option(value="slideHorz") SlideVert
+              option(value="slideVert") SlideVert
               option(value="fadeIn") FadeIn
               option(value="scaleOut") ScaleOut
     
