Additional animations: animations completed

--- a/src/index.pug
+++ b/src/index.pug
@@ -22,15 +22,15 @@ header.header
 
             select.pick-animation__select.form-control
               option(value="scaleIn" selected) ScaleIn
+              option(value="scaleOut") ScaleOut
               option(value="slideHorz") SlideHorz
               option(value="slideVert") SlideVert
               option(value="fadeIn") FadeIn
-              option(value="scaleOut") ScaleOut
     
       //content title
       h2.content__title Click on steps or 'Prev' and 'Next' buttons
     
-    .container
+    .container.overflow-hidden
     
       //multisteps-form
       .multisteps-form
